force-app/main/default/objects/Study_Pathway_Term__c/Study_Pathway_Term__c.object-meta.xml
<CustomObject>
    <description>The number of terms and configuration for a study pathway.</description>
    <label>Study Pathway Term</label>
    <nameField>
        <displayFormat>SPT-{0000}</displayFormat>
        <label>Study Pathway Term #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Pathway Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>