force-app/main/default/objects/Study_Pathway_Term__c/fields/Enrollment_Method__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Method__c</fullName>
    <label>Enrollment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pathway_Enrollment_Method</valueSetName>
    </valueSet>
</CustomField>