force-app/main/default/objects/Study_Pathway_Term__c/fields/Study_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Study_Pathway__c</fullName>
    <label>Study Pathway</label>
    <referenceTo>Study_Pathway__c</referenceTo>
    <relationshipLabel>Study Pathway Terms</relationshipLabel>
    <relationshipName>Study_Pathway_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>