force-app/main/default/objects/Study_Pathway_Term__c/fields/Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Term_Number__c</fullName>
    <label>Term #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>